--- a/src/lib/styles/global.css
+++ b/src/lib/styles/global.css
@@ -25,7 +25,7 @@ h3,
 h4,
 h5,
 h6 {
-	font-family: "Courier New", Courier, monospace;
+	font-family: 'Courier New', Courier, monospace;
 	font-weight: 700;
 	color: var(--blue);
 }
@@ -42,7 +42,7 @@ main {
 }
 
 button {
-	font-family: "Courier New", Courier, monospace;
+	font-family: 'Courier New', Courier, monospace;
 	font-weight: 700;
 	color: var(--offwhite);
 	background-color: var(--blue);
