--- a/src/lib/styles/global.css
+++ b/src/lib/styles/global.css
@@ -32,13 +32,25 @@ h6 {
 
 p,
 label,
-a {
+a,
+input {
 	font-family: Verdana, Geneva, Tahoma, sans-serif;
 	color: var(--blue);
 }
 
+input {
+	padding: 0.5em;
+	border: 1px solid var(--blue);
+	border-radius: 0;
+}
+
+dialog {
+	border: 2px solid var(--blue);
+}
+
 main {
 	position: relative;
+	padding-bottom: 10rem;
 }
 
 button {
@@ -50,6 +62,21 @@ button {
 	border-radius: 0;
 	padding: 0.5rem 1rem;
 	cursor: pointer;
+}
+
+button.btn-secondary {
+	background-color: transparent;
+	color: var(--blue);
+}
+
+button.btn-secondary:hover {
+	background-color: var(--blue);
+	color: var(--offwhite);
+}
+
+button.btn-danger {
+	background-color: var(--orange);
+	border-color: var(--orange);
 }
 
 button:hover {
