client state progress, initial dashboard ssr and clean csr handover

--- a/src/lib/styles/global.css
+++ b/src/lib/styles/global.css
@@ -27,7 +27,7 @@ h3,
 h4,
 h5,
 h6 {
-	font-family: "Courier New", Courier, monospace;
+	font-family: 'Courier New', Courier, monospace;
 	font-weight: 700;
 	color: var(--blue);
 }
@@ -61,7 +61,7 @@ main {
 }
 
 button {
-	font-family: "Courier New", Courier, monospace;
+	font-family: 'Courier New', Courier, monospace;
 	font-weight: 700;
 	color: var(--offwhite);
 	background-color: var(--blue);
