--- a/src/lib/styles/global.css
+++ b/src/lib/styles/global.css
@@ -7,8 +7,8 @@
 	--offwhite: #f6f5f0;
 	--side-padding: max(2rem, calc((100% - 1200px) / 2));
 	--cube-width: 300px;
-	--color-transition: color 0.2s ease-in-out, background-color 0.2s ease-in-out,
-		border-color 0.2s ease-in-out;
+	--color-transition:
+		color 0.2s ease-in-out, background-color 0.2s ease-in-out, border-color 0.2s ease-in-out;
 }
 
 html,
